Revision history for Hailo

{{$NEXT}}

0.33 2010-03-20 01:57:33

    - Optimize Hailo::Engine::Default to use less method calls. On
      t/hailo/real_workload.t (i.e. mass replies) this speeds up Hailo
      by 8%:

                         s/iter System Hailo    lib Hailo
            System Hailo   74.8           --          -7%
            lib Hailo      69.4           8%           --
    
      Furthermore replace the use of ->fetchall_hashref in a tight
      loop with ->fetchall_arrayref. This sped up mass replies by
      almost 60% (added to the 8% above):

                         s/iter System Hailo    lib Hailo
            System Hailo   68.2           --         -36%
            lib Hailo      43.6          57%           --
    
      But aside from selective benchmarking this made Hailo around 5%
      faster in the common case:
        
                         s/iter System Hailo    lib Hailo
            System Hailo   21.5           --          -6%
            lib Hailo      20.3           6%           --

0.32 2010-03-19 12:00:22

    - t/storage/dbd-options.t wasn't updated to take into account the
      renaming of modules done in 0.31. It would fail on machines that
      didn't have an older version of Hailo installed when running
      `make test'.

    - t/hailo/non_standard_plugin.t whines with `Issuing rollback()
      due to DESTROY without explicit disconnect()' on some systems
      since it doesn't use the Hailo::Test framework.

      Issuing rollbacks at the right time is an open issue with
      Hailo. I haven't been able to make it do the right thing by
      sprinkling around destructors in the main code, that'll cause
      things to be destroyed prematurely (probably some silly race
      condition).

    - Re-add Data::Section dependency. We need it for the
      Words-utf8-text.t test.

0.31 2010-03-18 21:45:25

    - Optimization and cleanup release. Hailo is now much much